Basic auth backend handling